--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+png = "0.11.0"
 rand = "0.8.4"
 rand_distr = "0.4.1"
-rayon = "1.5"
+rayon = "1.5.1"
 
 [profile.dev]
 opt-level = 2
